Pushed to beta status.
Reflection renaming of directories.

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,11 +9,14 @@ author_email = andreas.schaelicke@helmholtz-berlin.de
                pierre.schnizer@helmholtz-berlin.de
 description = EPICS archiver appliance access using google protobuf
 classifiers =
-	 Development Status :: 2 - Pre - Alpha
+	 Development Status :: 4 - Beta
          Intended Audience :: Science/Research
          License :: OSI Approved :: GNU General Public License (GPL)
          Programming Language :: Python :: 3
          Topic :: Scientific/Engineering :: Physics
+
+[build-system]
+requires = setup_tools
 
 [options]
 setup_requires = cython
@@ -22,17 +25,24 @@ install_requires = cython
 [options.extras_require]
 dev = cython
 
+# The configuration of the following two build steps depens on each
+# other.
 [build_proto_c]
 python = True
 cpp = True
-dir = backend
+src_dir = proto
+build_dir = proto_gen
+pydir = bact_archiver
 source = epics_event.proto
 
 [cython-module: bact_archiver.epics_event]
-include_dirs = backend
+include_dirs = proto_gen
                eval(__import__('numpy').get_include())
 
-sources = backend/epics_event.pyx
-          backend/epics_event.pb.cc
+# The directory will be typically match the src directory
+# for the build process.
+sources = proto/epics_event.pyx
+          proto_gen/epics_event.pb.cc
+libraries = protobuf
 language = c++
 show-all-warnings = True
