--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@
 name = bact-archiver
 fullname = BACT epics archiver appliance access
 version = 0.0.0
+url = https://github.com:hz-b/bact-archiver
 author = Andreas Schälicke, Pierre Schnizer
 author_email = andreas.schaelicke@helmholtz-berlin.de
                pierre.schnizer@helmholtz-berlin.de
