--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 name = bact-archiver
 fullname = BACT epics archiver appliance access
 version = 0.0.0
-url = https://github.com:hz-b/bact-archiver
+url = https://github.com/hz-b/bact-archiver
 author = Andreas Schälicke, Pierre Schnizer
 author_email = andreas.schaelicke@helmholtz-berlin.de
                pierre.schnizer@helmholtz-berlin.de
@@ -19,9 +19,18 @@ classifiers =
 [build-system]
 requires = setup_tools
 
+
 [options]
+packages = find:
 setup_requires = cython
-install_requires = cython
+# install_requires = cython
+requires = numpy
+include_package_data = True
+# zip_safe = False
+
+# [package_data]
+[options.data_files]
+config = config/archiver.cfg
 
 [options.extras_require]
 dev = cython
@@ -40,8 +49,9 @@ source = epics_event.proto
 include_dirs = proto_gen
                eval(__import__('numpy').get_include())
 
-# The directory will be typically match the src directory
-# for the build process.
+# The directory will be typically match the src_dir directory
+# of the build_proto_c section for the .pyx file and the
+# build_dir for the .cc file
 sources = proto/epics_event.pyx
           proto_gen/epics_event.pb.cc
 libraries = protobuf
