--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ cpp = True
 src_dir = proto
 build_dir = proto_gen
 pydir = bact_archiver
-source = epics_event.proto
+source = proto/epics_event.proto
 
 [cython-module: bact_archiver.epics_event]
 include_dirs = proto_gen
