Adding sphinx documentation Initial version Added doc dir to MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,3 +7,6 @@ include proto_gen/*
 include bact_archiver/*.py
 # configuration files
 include config/*.cfg
+# documentation files
+doc/conf.py
+doc/*.rst
