--- a/config/archiver.cfg
+++ b/config/archiver.cfg
@@ -1,5 +1,5 @@
 # This configuration file is rather an example.
-# It reflectes the archiver of the machine at BESSY II
+# It reflectes the external archiever of the machine at BESSY II
 #
 # Best practise:
 #   Install bact-archiver-local and adjust the configuration file to your needs
@@ -7,11 +7,11 @@
 #
 # This is the name of the default archiver
 [default]
-name = BESSY
+name = BESSY_ext
 
-[BESSY]
-description = central BESSY archiver
-base_url = http://archiver.trs.bessy.de
+[BESSY_ext]
+description = BESSY archiver (generic access)
+base_url = https://www.helmholtz-berlin.de/archiver
 # retrieve_url = retrieval
 # management_port = 17665
 # management_url = mgmt
