As uploaded as version 0.0.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,13 +9,13 @@ author = Andreas Schälicke, Pierre Schnizer
 author_email = andreas.schaelicke@helmholtz-berlin.de
                pierre.schnizer@helmholtz-berlin.de
 description = EPICS archiver appliance access using google protobuf
+long_description = file: README.rst
 classifiers =
 	 Development Status :: 4 - Beta
          Intended Audience :: Science/Research
          License :: OSI Approved :: GNU General Public License (GPL)
          Programming Language :: Python :: 3
          Topic :: Scientific/Engineering :: Physics
-
 [build-system]
 requires = setup_tools
 
