--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,5 +8,8 @@ include bact_archiver/*.py
 # configuration files
 include config/*.cfg
 # documentation files
-doc/conf.py
-doc/*.rst
+include doc/conf.py
+include doc/*.rst
+
+include THANKS
+include Changelog
