--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: true
+      fail-fast: False
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
 
@@ -22,8 +22,8 @@ jobs:
          # try to cache package install
     - uses: ConorMacBride/install-package@v1
         with:
-          apt: protobuf-compiler python3-dev
-    
+          apt: protobuf-compiler python3-dev gcc
+
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
@@ -35,7 +35,7 @@ jobs:
         python -m pip install flake8 pytest wheel
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: build and binary module
-       run: | 
+       run: |
         python setup.py build_proto_c
         python -m pip install .
 
