--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,7 +22,7 @@ jobs:
          # try to cache package install
     - uses: ConorMacBride/install-package@v1
       with:
-          apt: protobuf-compiler python3-dev gcc
+          apt: protobuf-compiler python3-dev python3-protobuf gcc
 
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
