--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,9 @@ include_package_data = True
 # zip_safe = False
 
 # [package_data]
-[options.data_files]
-config = config/archiver.cfg
+[options.package_data]
+bact_archiver =
+    archiver.cfg
 
 [options.extras_require]
 dev = cython
