--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,7 +6,7 @@ include proto/*
 include proto_gen/*
 include bact_archiver/*.py
 # configuration files
-include config/*.cfg
+include bact_archiver/*.cfg
 # documentation files
 include doc/conf.py
 include doc/*.rst
