[TASK] build: add requirements to setup.cfg so that wheel knows them

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,11 @@ requires = setup_tools
 [options]
 packages = find:
 setup_requires = cython
-# install_requires = cython
+install_requires =
+   pandas
+   protobuf >=3.18.3, ==3.*
+   python-dateutil
+
 requires = numpy
 include_package_data = True
 # zip_safe = False
