[FIX] require cython-setuptools

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,9 @@ bact_archiver =
     archiver.cfg
 
 [options.extras_require]
-dev = cython
+dev =
+    cython
+    cython-setuptools
 
 # The configuration of the following two build steps depens on each
 # other.
