--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 [metadata]
 name = bact-archiver
 fullname = BACT epics archiver appliance access
-version = 0.2.0
+version = 0.2.1
 url = https://github.com/hz-b/bact-archiver
 author = Andreas Schälicke, Pierre Schnizer
 author_email = andreas.schaelicke@helmholtz-berlin.de
@@ -40,7 +40,8 @@ bact_archiver =
 [options.extras_require]
 dev =
     cython
-    cython-setuptools
+# only needed once to create cysetuptools locally
+#    cython-setuptools
 
 # The configuration of the following two build steps depens on each
 # other.
