[FIX] cython-setuptools not required during build
thus taking it out of the loop

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ pandas
 protobuf >=3.18.3, ==3.*
 python-dateutil
 setuptools>=61.0.0
-cython-setuptools
+# only once for building cysetuptools
+# cython-setuptools
