[TASK] automatically run protobuffer before building tool

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ dev =
 # only needed once to create cysetuptools locally
 #    cython-setuptools
 
-# The configuration of the following two build steps depens on each
+# The configuration of the following two build steps depends on each
 # other.
 [build_proto_c]
 python = True
