[TASK] building proto buf files in temporary directory

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,7 +61,7 @@ include_dirs = proto_gen
 # of the build_proto_c section for the .pyx file and the
 # build_dir for the .cc file
 sources = proto/epics_event.pyx
-          proto_gen/epics_event.pb.cc
+#          proto_gen/epics_event.pb.cc
 libraries = protobuf
 language = c++
 show-all-warnings = True
