[TASK] only using pip for instal
no explicit call to setup.py build_proto_c

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,9 +24,9 @@ jobs:
     - uses: ConorMacBride/install-package@v1
       with:
           apt: protobuf-compiler
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v5
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
@@ -36,7 +36,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: build and binary module
       run: |
-        python setup.py build_proto_c
+        # python setup.py build_proto_c
         python -m pip install .
 
     - name: Lint with flake8
