--- a/setup.cfg
+++ b/setup.cfg
@@ -19,10 +19,13 @@ classifiers =
 [build-system]
 requires = setup_tools
 
-
 [options]
 packages = find:
-setup_requires = cython
+setup_requires =
+  cython
+  setuptools
+  setuptools-protobuf
+
 install_requires =
    pandas
    protobuf >=3.18.3, ==3.*
