--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+cython
+wheel
 pandas
 protobuf >=3.18.3, ==3.*
 python-dateutil
 setuptools>=61.0.0
+setuptools-scm
 # only once for building cysetuptools
 # cython-setuptools
