--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,7 +21,8 @@ jobs:
 
     steps:
 
-    - uses: ConorMacBride/install-package@v1
+    - name: install protobuf
+      uses: ConorMacBride/install-package@v1
       with:
           apt: protobuf-compiler
 
@@ -32,7 +33,11 @@ jobs:
           path: setuptools-protobuf
           ref: dev/feature/cpp-interface
 
-    - uses: actions/checkout@v4
+    - name: Checkout bact-archiver
+      uses: actions/checkout@v4
+      with:
+          path: bact-archiver
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
@@ -44,7 +49,7 @@ jobs:
            **/requirements*.txt
          # try to cache package install
 
-    - name: Install dependencies setuptools-protobuf
+    - name: Install setuptools-protobuf
       run: |
            find . -type f
            t_dir=setuptools-protobuf
@@ -56,13 +61,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest wheel
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
+        if [ -f bact-archiver/requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: build and binary module
       run: |
-        python setup.py build_proto_c
-        python -m pip install .
+        python -m pip install bact-archiver
 
     - name: Lint with flake8
       run: |
