--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,9 +37,10 @@ jobs:
       uses: actions/checkout@v4
       with:
           path: bact-archiver
+          ref: dev/feature/setuptools-protobuf
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
