--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -66,7 +66,7 @@ jobs:
 
     - name: build and binary module
       run: |
-        python -m pip install bact-archiver
+        python -m pip install bact-archiver/
 
     - name: Lint with flake8
       run: |
