--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ protobuf >=3.18.3, ==3.*
 python-dateutil
 setuptools>=61.0.0
 setuptools-scm
+setuptools-protobuf>=0.15
 # only once for building cysetuptools
 # cython-setuptools
