--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,6 @@
-# the source files
-include proto/*
-# the files generated
-include proto_gen/*
-include bact_archiver/*.py
 # configuration files
 include bact_archiver/*.cfg
+include bact_archiver/proto/*.cfg
 # documentation files
 include doc/conf.py
 include doc/*.rst
