--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -73,4 +73,4 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest --log-cli-level INFO
+        pytest --log-cli-level INFO tests/
