[TASK] moved info to pyproject.toml
solely configuration for protobuf builder in setup
need to find out howto include it in pyproject toml

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,50 +1,4 @@
-# -*- coding: utf-8 -*-
-
-[metadata]
-name = bact-archiver
-fullname = BACT epics archiver appliance access
-version = 0.2.1
-url = https://github.com/hz-b/bact-archiver
-author = Andreas Schälicke, Pierre Schnizer
-author_email = andreas.schaelicke@helmholtz-berlin.de
-               pierre.schnizer@helmholtz-berlin.de
-description = EPICS archiver appliance access using google protobuf
-long_description = file: README.rst
-classifiers =
-	 Development Status :: 4 - Beta
-         Intended Audience :: Science/Research
-         License :: OSI Approved :: GNU General Public License (GPL)
-         Programming Language :: Python :: 3
-         Topic :: Scientific/Engineering :: Physics
-[build-system]
-requires = setup_tools
-
-
-[options]
-packages = find:
-setup_requires = cython
-install_requires =
-   pandas
-   protobuf >=3.18.3, ==3.*
-   python-dateutil
-
-requires = numpy
-include_package_data = True
-# zip_safe = False
-
-# [package_data]
-[options.package_data]
-bact_archiver =
-    archiver.cfg
-
-[options.extras_require]
-dev =
-    cython
-# only needed once to create cysetuptools locally
-#    cython-setuptools
-
-# The configuration of the following two build steps depens on each
-# other.
+# Howto include this section to pyproject.toml
 [build_proto_c]
 python = True
 cpp = True
@@ -52,16 +6,3 @@ src_dir = proto
 build_dir = proto_gen
 pydir = bact_archiver
 source = proto/epics_event.proto
-
-[cython-module: bact_archiver.epics_event]
-include_dirs = proto_gen
-               eval(__import__('numpy').get_include())
-
-# The directory will be typically match the src_dir directory
-# of the build_proto_c section for the .pyx file and the
-# build_dir for the .cc file
-sources = proto/epics_event.pyx
-          proto_gen/epics_event.pb.cc
-libraries = protobuf
-language = c++
-show-all-warnings = True
