--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest wheel
+        python -m pip install flake8 pytest wheel setuptools
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: build and binary module
       run: |
