--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Archive wheel
       uses: actions/upload-artifact@v4
       with:
-        name: bact_archiver_wheel 
+        name: bact_archiver_${{ matrix.python-version }}
         path: bact_archiver*.whl
         retention-days: 14
       
