--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -13,15 +13,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: '3.x'
     - name: Install dependencies
       run: |
         python setup.py build_proto_c
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip, wheel, setuptools, twine
         pip install setuptools wheel twine
     - name: Build and publish
       env:
