--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python setup.py build_proto_c
-        python -m pip install --upgrade pip, wheel, setuptools, twine
+        python -m pip install --upgrade pip wheel setuptools twine
         pip install setuptools wheel twine
     - name: Build and publish
       env:
