--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: ConorMacBride/install-package@v1
+      with:
+          apt: protobuf-compiler
     - uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -20,13 +23,13 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip wheel setuptools twine
-        pip install setuptools wheel twine
+        python -m pip install --upgrade pip wheel setuptools twine numpy
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         python setup.py build_proto_c
-        python setup.py sdist bdist_wheel
+        python -m pip wheel -w dist/ ./
+        python setup.py sdist
         python -m twine  --repository testpypi upload dist/*
