--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,13 +23,13 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip wheel setuptools twine numpy
+        python -m pip install --upgrade pip build wheel setuptools twine numpy
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         python setup.py build_proto_c
-        python -m pip wheel -w dist/ ./
-        python setup.py sdist
-        python -m twine  --repository testpypi upload dist/*
+        python -m build -w 
+        python -m build -s 
+        python -m twine  upload --repository testpypi dist/*
