--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,9 @@
 include protocol_buffer.py
 # the source files
-# include proto/*
+include proto/*
 # the files generated
-b# configuration files
+include proto_gen/*
+# configuration files
 include bact_archiver/*.cfg
 # documentation files
 include doc/conf.py
