--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,6 +17,7 @@ jobs:
       fail-fast: False
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
+        numpy-version: [ "numpy<2.0" , "numpy>=2.0" ]
 
     steps:
          # try to cache package install
@@ -24,28 +25,33 @@ jobs:
       with:
           apt: protobuf-compiler
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+
+    - name: Set up Python ${{ matrix.python-version }} ${{ matrix.numpy-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache-dependency-path: |
+           **/pyproject.toml
+           **/requirements*.txt
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest wheel setuptools
+        python -m pip install flake8 pytest wheel setuptools build
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: build and binary module
       run: |
         python setup.py build_proto_c
         python -m pip wheel ./
         python -m pip install ./
-        
+
     - name: Archive wheel
       uses: actions/upload-artifact@v4
       with:
         name: bact_archiver_${{ matrix.python-version }}
         path: bact_archiver*.whl
         retention-days: 14
-      
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
