--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: False
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         numpy-version: [ "numpy<2.0" , "numpy>=2.0" ]
 
     steps:
@@ -37,11 +37,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest wheel setuptools build
+        python -m pip install flake8 pytest wheel build
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: build and binary module
       run: |
-        python setup.py build_proto_c
         python -m pip wheel ./
         python -m pip install ./
 
