[TASK] documented change to meson, new version
bumped up minor number: build system changed

--- a/bact_archiver/meson.build
+++ b/bact_archiver/meson.build
@@ -6,5 +6,5 @@ py_sources = run_command('/bin/sh',
 py.install_sources(
   py_sources,
   pure: false,
-  subdir: 'timepix_sort'
+  subdir: 'bact_archiver'
 )
