--- a/proto/meson.build
+++ b/proto/meson.build
@@ -1,6 +1,7 @@
-# use protoc to create buffer
+# protoc: created required files
 protoc = find_program('protoc', required : true)
-deps = dependency('protobuf', required : true)
+protobuf = dependency('protobuf', required : true)
+
 cpp_gen = generator(protoc,
   output    : ['@BASENAME@.pb.cc', '@BASENAME@.pb.h'],
   arguments : ['--proto_path=@CURRENT_SOURCE_DIR@', '--cpp_out=@BUILD_DIR@', '@INPUT@']
@@ -12,32 +13,26 @@ py_gen = generator(protoc,
 cpp_generated = cpp_gen.process('epics_event.proto')
 py_generated = py_gen.process('epics_event.proto')
 
-# Why do I need to copy the files here?
-# by default ninja will put them into its own dir?
-cpp_proc = custom_target('cpp_proto',
-                        command: [ 'cp', '@INPUT@', '@OUTPUT@' ],
-                        input : cpp_generated,
-                        output : '.',
-                        build_by_default : true)
-
 py_proc = custom_target('py_proto',
                         command: [ 'cp', '@INPUT@', '@OUTPUT@' ],
                         input : py_generated,
                         output : 'epics_event_pb2.py',
                         build_by_default : true)
 
-# cpython interface
+# cython extension
 incdir_numpy = run_command(py,
   ['-c', 'import os; os.chdir(".."); import numpy; print(numpy.get_include())'],
   check : true
 ).stdout().strip()
-inc_dir = include_directories(incdir_numpy, '.', )
+inc_dir = include_directories(incdir_numpy)
 
 py.extension_module(
   'epics_event',
   'epics_event.pyx',
+  cpp_generated,
   install: true,
   include_directories : inc_dir,
   subdir: 'bact_archiver',
-  override_options : ['cython_language=cpp']
+  override_options : ['cython_language=cpp'],
+  dependencies : protobuf
  )
