[FIX] included created python file

--- a/bact_archiver/meson.build
+++ b/bact_archiver/meson.build
@@ -5,6 +5,7 @@ py_sources = run_command('/bin/sh',
 
 py.install_sources(
   py_sources,
+  'epics_event_pb2.py',
   'archiver.cfg',
   pure: false,
   subdir: 'bact_archiver'
