--- a/bact_archiver/meson.build
+++ b/bact_archiver/meson.build
@@ -5,8 +5,9 @@ py_sources = run_command('/bin/sh',
 
 py.install_sources(
   py_sources,
-  'epics_event_pb2.py',
+  # 'epics_event_pb2.py',
   'archiver.cfg',
   pure: false,
   subdir: 'bact_archiver'
 )
+subdir('proto')
