--- a/bact_archiver/proto/meson.build
+++ b/bact_archiver/proto/meson.build
@@ -20,11 +20,11 @@ py_generated = py_gen.process('epics_event.proto')
 #                        build_by_default : true)
 message('install dir')
 message(py.get_install_dir())
-py_proc2 = configure_file(#'python_proto_as_config',
-	               # command:  [ 'proto_wrap.sh', '@INPUT@', '@OUTPUT@' ],
-		       copy : true,
+py_proc2 = configure_file(# 'python_proto_as_config',
+	               command:  [ 'proto_wrap.sh', '@INPUT@', '@OUTPUT@' ],
+		       # copy : true,
 		       input : 'epics_event.proto',
-		       output :  'epics_event_pb2.py',
+		       output :  'bact_archiver_epics_event_pb2.py',
 		       install : true,
 		       install_dir: py.get_install_dir(),
 )
