[TASK] cleanup, proto back where it should be
using custom command, no external shell hack needed

--- a/meson.build
+++ b/meson.build
@@ -12,4 +12,5 @@ py = import('python').find_installation(pure: false)
 
 # need to build the proto generated files before
 # I can build the cython extension
+subdir('proto')
 subdir('bact_archiver')
