--- a/proto/meson.build
+++ b/proto/meson.build
@@ -7,14 +7,8 @@ cpp_gen = generator(protoc,
   arguments : ['--proto_path=@CURRENT_SOURCE_DIR@', '--cpp_out=@BUILD_DIR@', '@INPUT@']
   )
 cpp_generated = cpp_gen.process('epics_event.proto')
-# does not fully work ..
-# how do I install it
-py_gen = generator(protoc,
-  output    : ['@BASENAME@_pb2.py'],
-  arguments : ['--proto_path=@CURRENT_SOURCE_DIR@', '--python_out=@BUILD_DIR@', '@INPUT@']
-  )
-py_generated = py_gen.process('epics_event.proto')
 
+# Got generator not to do the job
 py_gen2 = custom_target('epics_event_build_py',
     output: ['epics_event_pb2.py'],
     input: 'epics_event.proto',
@@ -25,12 +19,6 @@ py_gen2 = custom_target('epics_event_build_py',
     install_dir: py.get_install_dir() / 'bact_archiver',  # need to instalall epics_event_pb2.py
     install_tag: 'python-runtime',
 )
-
-py_proc = custom_target('py_proto',
-                        command: [ 'cp', '@INPUT@', '@OUTPUT@' ],
-                        input : py_generated,
-                        output : 'epics_event_pb2.py',
-                        build_by_default : true)
 
 # cython extension
 incdir_numpy = run_command(py,
