--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: ConorMacBride/install-package@v1
+      with:
+        apt: protobuf-compiler
     - uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v5
