--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: False
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: [ "3.12" ] # ["3.9", "3.10", "3.11", "3.12"]
         numpy-version: [ "numpy<2.0" , "numpy>=2.0" ]
 
     steps:
